--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ li, a {
     justify-content: space-between;
     align-items: center;
     padding: 30px;
-    padding-left: 260px;
-    padding-right: 240px;
+    margin-left: 290px;
+    margin-right: 190px;
     margin-bottom: 20px;
 }
 
@@ -168,11 +168,11 @@ li, a {
 }
 .head2{
     display: flex;
-    justify-content: end;
+    justify-content: center;
     color: red;
     font-weight: bold;
     padding: 30px 10%;
-    margin-left: 30px;
+    margin-left: 200px;
     margin-bottom: 10px;
 }
 
@@ -275,8 +275,8 @@ li, a {
 }
 .butt{
     display: flex;
-    justify-content: flex-end;
-    margin-left: 800px;
+    justify-content: center;
+    margin-left: 860px;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 10px;
@@ -341,7 +341,7 @@ li, a {
     display: flex;
     justify-content: center;
     color: red;
-    margin-right: 480px;
+    margin-right: 85px;
     margin-top: 20px;
     margin-bottom: 50px;
 }
@@ -364,7 +364,7 @@ li, a {
 .outf2 {
     display: flex;
     justify-content: space-evenly;
-    margin-left: 69px;
+    margin-left: 100px;
     align-items: center;
     padding: 15px 15%;
 }
