--- a/styles.css
+++ b/styles.css
@@ -17,20 +17,19 @@ li, a {
 
 
 .head1{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px;
-    margin-left: 290px;
-    margin-right: 190px;
-    margin-bottom: 20px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        padding: 30px;
+        margin: 0 auto 0;
 }
 
 .logo{
     cursor: pointer;
     width: 100px;
     height: 60px;
-    margin-right: 206px;
+
 }
 
 .nav_links {
@@ -67,33 +66,28 @@ li, a {
     font-weight: bold;
     margin: 10px;;
 }
-.csorc h2{
-    color: black;
-    font-weight: bold;
-    margin: 5px;
-}
 .csorc p{
+    display: block;
     color: white;
-    font-weight: lighter;
+    font-weight: normal;
     margin-bottom: 10px;
     font-family: "Montserrat", sans-serif;
+    font-size: 13px;
+    letter-spacing: 0.8px;
 }
-
-.csorc button{
+.csorc  a{
+    display: inline-block;
+    text-decoration: none;
+    color: black;
+    background-color: white;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
-    font-size: 10px;
+    font-size: 16px;
     background-color:white;
     padding: 5px;
     border-radius: 5px;
     cursor: pointer;
-}
-
-.csorc button a{
-    text-decoration: none;
-    color: black;
-    background-color: white;
-    
+    margin-top: 20px;
 }
 
 .m2_container{
@@ -166,19 +160,18 @@ li, a {
     background-color: white;
 
 }
+
 .head2{
     display: flex;
-    justify-content: center;
+    justify-content: start;
     color: red;
     font-weight: bold;
-    padding: 30px 10%;
-    margin-left: 200px;
+    padding: 30px;
+    margin-left: 250px;
     margin-bottom: 10px;
 }
 
-.head2{
-    margin-right: 700px;
-}
+
 .head3{
     display: flex;
     justify-content: center;
@@ -209,6 +202,7 @@ li, a {
     width: 60px;
     margin-top: 10px;
   }
+  
  .item1{
     width: 250px;
     height: 150px;
@@ -220,6 +214,7 @@ li, a {
     font-weight: 500px;
     font-size: 15px;
   }
+
 .m3_container p{
     color: white;
     font-weight: lighter;
@@ -228,6 +223,25 @@ li, a {
     font-size: 10px;
     padding: 15px;
 }
+
+.m_container button{
+    margin-top: 20px;
+    margin-left: 810px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 10px;
+    background-color:white;
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.m_container button a {
+    text-decoration: none;
+    color: black;
+    background-color: white;
+}
+
 .item1 {
     grid-area: 1 / 1 / span 2 / span 2;
   }
@@ -273,27 +287,25 @@ li, a {
 .charco h4 a:hover{
     color:#008a90 ;
 }
-.butt{
-    display: flex;
-    justify-content: center;
-    margin-left: 860px;
+
+.charcont button{
+    margin-top: 20px;
+    margin-left: 810px;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 10px;
-    background: white;
+    background-color:white;
     padding: 5px;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 30px;
 }
 
-
-.butt a {
+.charcont button a {
     text-decoration: none;
     color: black;
     background-color: white;
-
 }
+
 .abcon {
     height: 280px;
     width: 650px;
@@ -364,7 +376,6 @@ li, a {
 .outf2 {
     display: flex;
     justify-content: space-evenly;
-    margin-left: 100px;
     align-items: center;
     padding: 15px 15%;
 }
@@ -395,6 +406,55 @@ li, a {
 .nav_links3 li a img{
     height: 30px;
     width: 30px;
-    align-items: center;
 }
 
+@media (max-width: 390px)
+{
+    body{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100vw;
+    }
+    .head1{
+        width: 600px;
+        margin: 0 auto;
+        justify-content: space-between;
+        padding: 30px 0;
+
+    }
+    .m1_container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20px;
+        text-align: center;
+        width: 600px;
+        margin: 0 auto;
+    }
+    .csorc{
+        width: 100%;
+    }
+    .csorc h1{
+        margin-bottom: 20px;
+    }
+    .m2_container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 600px;
+        margin: 0 auto;
+    }
+    .f1{
+        width: 100%;
+        text-align: center;
+    }
+    .f1 img{
+        margin: 0 auto;
+    }
+    .h2{
+        align-items: center;
+    }
+
+}
